# Lurk.AI-Discord-Bot

./: README.md  pyproject.toml  requirements.txt
src/lurk_bot/: __init__.py  bot.py  config.py  llm.py  memory.py  persona.py
